--- a/data/report.css
+++ b/data/report.css
@@ -1,8 +1,4 @@
 <style>
-	.data {
-		display: block;
-		margin-left: 5px;
-	}
 
 	.header {
 		font-size: 24px;
@@ -23,6 +19,10 @@
 		box-shadow: 2px 2px 1px silver;
 	}
 
+	.data {
+		display: block;
+		margin-left: 5px;
+	}
 
 	.bloc {
 		padding: 25px;
@@ -36,7 +36,7 @@
 	body {
 		padding: 30px;
 		font-family: arial;
-		background-color: #D9D9D9;
+		background-color: #FFFFFF;
 	}
 
 	.label {
